--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 PORT=5000
+MONGO_URI=mongodb+srv://vibhuti6378:vibhuti123@cluster0.6halk8g.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
