--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Vibhuti Chandrakar",
   "license": "ISC",
   "dependencies": {
+    "colors": "^1.4.0",
     "dotenv": "^16.4.5",
     "express": "^4.18.3",
     "mongoose": "^8.2.2",
